versioned_docs/version-6.2/client-api/operations/maintenance/connection-strings/add-connection-string.mdx
---
title: "Add Connection String Operation"
sidebar_label: Add Connection String
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/language-switcher";
import LanguageContent from "@site/src/components/language-content";

<LanguageSwitcher />
<LanguageContent language="csharp">
# Add Connection String Operation
---

<Admonition type="note" title="Note">

* Use the [PutConnectionStringOperation](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#the%c2%a0putconnectionstringoperation%c2%a0method) method to define a connection string in your database.

* In this page:  
    * [Add a RavenDB connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-ravendb-connection-string)  
    * [Add an SQL connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-sql-connection-string)  
    * [Add an OLAP connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-olap-connection-string)  
    * [Add an Elasticsearch connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-elasticsearch-connection-string)  
    * [Add a Kafka connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-kafka-connection-string)  
    * [Add a RabbitMQ connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-rabbitmq-connection-string)  
    * [Add an Azure Queue Storage connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-azure-queue-storage-connection-string)
    * [The PutConnectionStringOperation method](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#the%c2%a0putconnectionstringoperation%c2%a0method)

</Admonition>

---

<Admonition type="info" title="Add a RavenDB connection string" id="add-a-ravendb-connection-string" href="#add-a-ravendb-connection-string">

The RavenDB connection string is used by RavenDB's [RavenDB ETL Task](../../../../server/ongoing-tasks/etl/raven).

---

Example:
<TabItem value="something" label="add_raven_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to a RavenDB database destination
// ============================================================
var ravenDBConStr = new RavenConnectionString
\{
    Name = "ravendb-connection-string-name",
    Database = "target-database-name",
    TopologyDiscoveryUrls = new[] \{ "https://rvn2:8080" \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<RavenConnectionString>(ravenDBConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

---

Syntax:
<TabItem value="something-something" label="raven_connection_string">
<CodeBlock language="csharp">
{`public class RavenConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.Raven;
    
    public string Database \{ get; set; \}   // Target database name
    public string[] TopologyDiscoveryUrls; // List of server urls in the target RavenDB cluster
\}
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">

**Secure servers**  

To [connect to secure RavenDB servers](../../../../server/security/authentication/certificate-management#enabling-communication-between-servers:-importing-and-exporting-certificates)
you need to:  
1. Export the server certificate from the source server.  
2. Install it as a client certificate on the destination server.  
  
This can be done from the [Certificates view](../../../../server/security/authentication/certificate-management#studio-certificates-management-view) in the Studio.

</Admonition>

</Admonition>

<Admonition type="info" title="Add an SQL connection string" id="add-an-sql-connection-string" href="#add-an-sql-connection-string">

The SQL connection string is used by RavenDB's [SQL ETL Task](../../../../server/ongoing-tasks/etl/sql).

---

Example:
<TabItem value="something" label="add_sql_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to a SQL database destination
// ========================================================
var sqlConStr = new SqlConnectionString
\{
    Name = "sql-connection-string-name",

    // Define destination factory name
    FactoryName = "MySql.Data.MySqlClient",

    // Define the destination database
    // May also need to define authentication and encryption parameters
    // By default, encrypted databases are sent over encrypted channels
    ConnectionString = "host=127.0.0.1;user=root;database=Northwind"
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<SqlConnectionString>(sqlConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

---

Syntax:
<TabItem value="something" label="sql_connection_string">
<CodeBlock language="csharp">
{`public class SqlConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.Sql;
    
    public string ConnectionString \{ get; set; \}
    public string FactoryName \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="info" title="Add an OLAP connection string" id="add-an-olap-connection-string" href="#add-an-olap-connection-string">

The OLAP connection string is used by RavenDB's [OLAP ETL Task](../../../../server/ongoing-tasks/etl/olap).

---

**To a local machine** - example:  

<TabItem value="something" label="add_olap_connection_string_1">
<CodeBlock language="csharp">
{`// Define a connection string to a local OLAP destination
// ======================================================
OlapConnectionString olapConStr = new OlapConnectionString
\{
    Name = "olap-connection-string-name",
    LocalSettings = new LocalSettings
    \{
        FolderPath = "path-to-local-folder"
    \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<OlapConnectionString>(olapConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

---

**To a cloud-based server** - example:  
  
* The following example shows a connection string to Amazon AWS.  
* Adust the parameters as needed if you are using other cloud-based servers (e.g. Google, Azure, Glacier, S3, FTP).  
* The available parameters are listed in [ETL destination settings](../../../../server/ongoing-tasks/etl/olap#etl-destination-settings).   

<TabItem value="something" label="add_olap_connection_string_2">
<CodeBlock language="csharp">
{`// Define a connection string to an AWS OLAP destination
// =====================================================
var olapConStr = new OlapConnectionString
\{
    Name = "myOlapConnectionStringName",
    S3Settings = new S3Settings
    \{
        BucketName = "myBucket",
        RemoteFolderName = "my/folder/name",
        AwsAccessKey = "myAccessKey",
        AwsSecretKey = "myPassword",
        AwsRegionName = "us-east-1"
    \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<OlapConnectionString>(olapConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

---

Syntax:
<TabItem value="something" label="olap_connection_string">
<CodeBlock language="csharp">
{`public class OlapConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.Olap;
    
    public LocalSettings LocalSettings \{ get; set; \}
    public S3Settings S3Settings \{ get; set; \}
    public AzureSettings AzureSettings \{ get; set; \}
    public GlacierSettings GlacierSettings \{ get; set; \}
    public GoogleCloudSettings GoogleCloudSettings \{ get; set; \}
    public FtpSettings FtpSettings \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="info" title="Add an Elasticsearch connection string  " id="add-an-elasticsearch-connection-string" href="#add-an-elasticsearch-connection-string">

The Elasticsearch connection string is used by RavenDB's [Elasticsearch ETL Task](../../../../server/ongoing-tasks/etl/elasticsearch).

---

Example:
<TabItem value="something" label="add_elasticsearch_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to an Elasticsearch destination
// ==========================================================
var elasticSearchConStr = new ElasticSearchConnectionString
\{
    Name = "elasticsearch-connection-string-name",
    
    // Elasticsearch Nodes URLs
    Nodes = new[] \{ "http://localhost:9200" \},
    
    // Authentication Method
    Authentication = new Raven.Client.Documents.Operations.ETL.ElasticSearch.Authentication
    \{
        Basic = new BasicAuthentication
        \{
            Username = "John",
            Password = "32n4j5kp8"
        \}
    \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = 
    new PutConnectionStringOperation<ElasticSearchConnectionString>(elasticSearchConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

---

Syntax:
<TabItem value="something" label="elasticsearch_connection_string">
<CodeBlock language="csharp">
{`public class ElasticsearchConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.ElasticSearch;
    
    public string Nodes \{ get; set; \}
    public string Authentication \{ get; set; \}
    public string Basic \{ get; set; \}
    public string Username \{ get; set; \}
    public string Password \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="info" title="Add a Kafka connection string " id="add-a-kafka-connection-string" href="#add-a-kafka-connection-string">

The Kafkah connection string is used by RavenDB's [Kafka Queue ETL Task](../../../../server/ongoing-tasks/etl/queue-etl/kafka).  
Learn how to add a Kafka connection string in section [Add a Kafka connection string]( ../../../../server/ongoing-tasks/etl/queue-etl/kafka#add-a-kafka-connection-string).

</Admonition>

<Admonition type="info" title="Add a RabbitMQ connection string " id="add-a-rabbitmq-connection-string" href="#add-a-rabbitmq-connection-string">

The RabbitMQ connection string is used by RavenDB's [RabbitMQ Queue ETL Task](../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq).  
Learn how to add a RabbitMQ connection string in section [Add a RabbitMQ connection string]( ../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq#add-a-rabbitmq-connection-string).

</Admonition>

<Admonition type="info" title="Add an Azure Queue Storage connection string " id="add-an-azure-queue-storage-connection-string" href="#add-an-azure-queue-storage-connection-string">

The Azure Queue Storage connection string is used by RavenDB's [Azure Queue Storage ETL Task](../../../../server/ongoing-tasks/etl/queue-etl/azure-queue).  
Learn to add an Azure Queue Storage connection string in section [Add an Azure Queue Storage connection string]( ../../../../server/ongoing-tasks/etl/queue-etl/azure-queue#add-an-azure-queue-storage-connection-string).

</Admonition>

<Admonition type="info" title="The&nbsp;`PutConnectionStringOperation`&nbsp;method" id="the-nbsp-putconnectionstringoperation-nbsp-method" href="#the-nbsp-putconnectionstringoperation-nbsp-method">

<TabItem value="something" label="put_connection_string">
<CodeBlock language="csharp">
{`public PutConnectionStringOperation(T connectionString)
`}
</CodeBlock>
</TabItem>

| Parameters           | Type                            | Description                                                                                                        |
|----------------------|---------------------------------|--------------------------------------------------------------------------------------------------------------------|
| **connectionString** | `RavenConnectionString`         | Object that defines the RavenDB connection string.                                                                 |
| **connectionString** | `SqlConnectionString`           | Object that defines the SQL Connection string.                                                                     |
| **connectionString** | `OlapConnectionString`          | Object that defines the OLAP connction string.                                                                     |
| **connectionString** | `ElasticSearchConnectionString` | Object that defines the Elasticsearch connction string.                                                            |
| **connectionString** | `QueueConnectionString`         | Object that defines the connection string for the Queue ETLs tasks (Kafka, RabbitMQ, and the Azure Queue Storage). |

<TabItem value="something-something" label="connection_string_class">
<CodeBlock language="csharp">
{`// All the connection string class types inherit from this abstract ConnectionString class:
// ========================================================================================

public abstract class ConnectionString
\{
    // A name for the connection string
    public string Name \{ get; set; \}
    
    // The connection string type
    public abstract ConnectionStringType Type \{ get; \} 
\}

public enum ConnectionStringType
\{
    RavenNone,
    Raven,
    Sql,
    Olap,
    ElasticSearch,
    Queue,
    Snowflake
\}
`}
</CodeBlock>
</TabItem>

</Admonition>


</LanguageContent>